--- a/index.mobile.html
+++ b/index.mobile.html
@@ -31,26 +31,42 @@
 				</li>
 				<li>
 					<div class="img-frame">
-						<img src="img/mobile-icon/smile.png">
+						<img src="img/mobile-icon/JD.png">
 					</div>
 					<p class="title">京东福利</p>
 				</li>
 				<li>
 					<div class="img-frame">
-						<img src="img/mobile-icon/smile.png">
+						<img src="img/mobile-icon/plane.png">
 					</div>
 					<p class="title">南航特价票</p>
 				</li>
 				<li>
 					<div class="img-frame">
-						<img src="img/mobile-icon/smile.png">
+						<img src="img/mobile-icon/gift.png">
 					</div>
 					<p class="title">邀请有礼</p>
 				</li>
 			</ul>
 		</div>
-		<div class="hot-block"></div>
-		<div class="new-activity"></div>
+		<div class="hot-block">
+			<div class="block-header">
+				<img class="block-icon" src="img/mobile-icon/hot.png"></img>
+				<span class="block-title">热门专区</span>
+			</div>
+		</div>
+		<div class="new-activity">
+			<div class="block-header">
+				<img class="block-icon" src="img/mobile-icon/new.png"></img>
+				<span class="block-title">最新活动</span>
+			</div>
+			<div class="activity-picture">
+				<ul class="activity-picture-list">
+					<li><img src="img/mobile-icon/aces.png"></li>
+					<li><img src="img/mobile-icon/queen.png"></li>
+				</ul>
+			</div>
+		</div>
 		<script type="text/javascript" src="js/common/jquery-3.3.1.min.js"></script>
 		<script type="text/javascript" src="js/index.mobile.js"></script>
 	</body>
