Signed-off-by: C.L. Tang <cltang@vhsoft.com>

--- a/index.mobile.html
+++ b/index.mobile.html
@@ -70,27 +70,35 @@
 				<div class="swiper-wrapper">
 					<div class="swiper-slide">
 						<img class="hot-img" src="img/mobile-icon/hot01.png" />
+						<p class="title">天天炫斗</p>
 					</div>
 					<div class="swiper-slide">
 						<img class="hot-img" src="img/mobile-icon/hot02.png" />
+						<p class="title">热血传奇</p>
 					</div>
 					<div class="swiper-slide">
 						<img class="hot-img" src="img/mobile-icon/hot03.png" />
+						<p class="title">全名超神</p>
 					</div>
 					<div class="swiper-slide">
 						<img class="hot-img" src="img/mobile-icon/hot04.png" />
+						<p class="title">火影忍者</p>
 					</div>
 					<div class="swiper-slide">
 						<img class="hot-img" src="img/mobile-icon/hot01.png" />
+						<p class="title">天天炫斗</p>
 					</div>
 					<div class="swiper-slide">
 						<img class="hot-img" src="img/mobile-icon/hot02.png" />
+						<p class="title">天天炫斗</p>
 					</div>
 					<div class="swiper-slide">
 						<img class="hot-img" src="img/mobile-icon/hot03.png" />
+						<p class="title">天天炫斗</p>
 					</div>
 					<div class="swiper-slide">
 						<img class="hot-img" src="img/mobile-icon/hot04.png" />
+						<p class="title">天天炫斗</p>
 					</div>
 				</div>
 				<!-- Add Pagination -->
