Signed-off-by: C.L. Tang <cltang@vhsoft.com>

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			</div>
 		</div>
 		<div class="banner">
-			<img class="banner-bg" src="img/banner-bg.png">
+			<img class="banner-bg" src="img/banner-bg.jpg">
 			<div class="stars">
 				<div class="star"></div>
 				<div class="star pink"></div>
@@ -43,7 +43,7 @@
 			</div>
 		</div>
 		<div class="hero-list-frame">
-			<img class="bg-circulation bg01" src="img/bg-circulation-01.png">
+			<img class="bg-circulation bg01" src="img/bg-circulation-01.jpg">
 			<div class="hero-list js-part" id="part1">
 				<div class="list-header">
 					<div class="title">
@@ -118,7 +118,7 @@
 				<div class="hr"></div>
 				<div class="clean"></div>
 			</div>
-			<img class="bg-circulation bg02" src="img/bg-circulation-02.png">
+			<img class="bg-circulation bg02" src="img/bg-circulation-02.jpg">
 
 			<div class="hero-list js-part" id="part2">
 				<div class="list-header">
@@ -223,7 +223,7 @@
 				<div class="hr"></div>
 				<div class="clean"></div>
 			</div>
-			<img class="bg-circulation bg03" src="img/bg-circulation-03.png">
+			<img class="bg-circulation bg03" src="img/bg-circulation-03.jpg">
 
 			<div class="hero-list js-part" id="part3">
 				<div class="list-header">
@@ -331,7 +331,7 @@
 			</div>
 		</div>
 		<div class="footer">
-			<img class="bg-footer" src="img/footer-bg.png">
+			<img class="bg-footer" src="img/footer-bg.jpg">
 
 			<div class="rule">
 				<h1 class="title">活动规则</h1>
