--- a/index.mobile.html
+++ b/index.mobile.html
@@ -5,6 +5,7 @@
 		<title>阿卡丽的神秘商店</title>
 		<meta charset="utf-8">
 		<!--<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">-->
+			<!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
 		<meta content="yes" name="apple-mobile-web-app-capable">
 		<meta content="black" name="apple-mobile-web-app-status-bar-style">
 		<meta content="yes" name="apple-touch-fullscreen">
