--- a/indexVue.html
+++ b/indexVue.html
@@ -18,7 +18,7 @@
 				</div>
 			</div>
 			<div class="banner">
-				<img class="banner-bg" src="img/banner-bg.png">
+				<img class="banner-bg" src="img/banner-bg.jpg">
 				<div class="stars">
 					<div class="star"></div>
 					<div class="star pink"></div>
@@ -46,9 +46,9 @@
 			</div>
 			<div class="hero-list-frame">
 				<div v-for="(hero, index) in herolist" :key="hero.id">
-					<div v-if="(index)%3==0"><img class="bg-circulation bg01" src="img/bg-circulation-01.png"></div>
-					<div v-else-if="(index)%3==1"><img class="bg-circulation bg02" src="img/bg-circulation-02.png"></div>
-					<div v-else-if="(index)%3==2"><img class="bg-circulation bg03" src="img/bg-circulation-03.png"></div>
+					<div v-if="(index)%3==0"><img class="bg-circulation bg01" src="img/bg-circulation-01.jpg"></div>
+					<div v-else-if="(index)%3==1"><img class="bg-circulation bg02" src="img/bg-circulation-02.jpg"></div>
+					<div v-else-if="(index)%3==2"><img class="bg-circulation bg03" src="img/bg-circulation-03.jpg"></div>
 					<div class="hero-list js-part" id="part1">
 						<div class="list-header">
 							<div class="title">
@@ -86,7 +86,7 @@
 				</div>
 			</div>
 			<div class="footer">
-				<img class="bg-footer" src="img/footer-bg.png">
+				<img class="bg-footer" src="img/footer-bg.jpg">
 				<div class="rule">
 					<h1 class="title">活动规则</h1>
 					<ul class="rule-list">
